// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render component CourseSearch within Layout match to snapshot in English 1`] = `
<DocumentFragment>
  <div
    class="row"
  >
    <nav
      aria-label="Sub menu"
      class="col navbar navbar-expand-lg navbar-light"
      id="mainMenu"
    >
      <div
        class="collapse navbar-collapse"
        id="navbarNav"
      >
        <ul
          class="nav"
        >
          <li
            class="parentLink"
          >
            <a
              href="/student/?l=en"
            >
              Student at KTH
            </a>
          </li>
        </ul>
        <ul
          class="nav nav-list expandable"
        >
          <li
            class="nav-item ancestor"
          >
            <div>
              Course and programme directory
            </div>
          </li>
          <li
            class="nav-item leaf"
          >
            <a
              class="nav-link"
              href="/student/kurser/kurser-inom-program"
            >
              Programme Syllabuses
            </a>
          </li>
          <li
            class="nav-item leaf"
          >
            <a
              class="nav-link"
              href="/student/kurser/sokkurs"
            >
              Search courses
            </a>
          </li>
          <li
            class="nav-item leaf"
          >
            <a
              class="nav-link"
              href="/student/kurser/org"
            >
              Courses by school
            </a>
          </li>
          <li
            class="nav-item leaf"
          >
            <a
              class="nav-link"
              href="/student/program/shb"
            >
              Studies before 2007/2008
            </a>
          </li>
        </ul>
      </div>
    </nav>
    <div
      class="col"
    >
      <main
        id="mainContent"
      >
        <div
          class="row"
        >
          <div
            class="col"
          >
            <header
              role="presentation"
            >
              <h1>
                Search courses
              </h1>
            </header>
            <div
              class="lead"
            >
              <p>
                This is where you will find course information at KTH. You will access information regarding course selection, preparing and taking the course, and course development. Search for the course name, part of the course name, or course code. Information about which courses are included in a programme can be accessed via the menu item Programme syllabuses.
              </p>
            </div>
          </div>
        </div>
        <div
          class="row"
        >
          <div
            class="col"
          >
            <div
              id="alert-placeholder"
            />
          </div>
        </div>
        <div
          class="row"
        >
          <div
            class="col"
          >
            <details
              class=""
            >
              <summary
                aria-label=""
                class="white"
              >
                Instructions for searching
              </summary>
              <div>
                <ul
                  class="search-instructions"
                >
                  <li>
                    You can search using part of the course name or code. Searching for "data" will return "Data Storage Paradigms" as well as "Database Techniques" and "Algorithms, Data Structures and Complexity".
                  </li>
                  <li>
                    Searching for more than one word will return courses containing all of the words. Searching for "part 1" will return courses with both part and 1 in course name or code, for example "SI2610 Many Particle Physics" and "DD1343 Computer Science and Numerical Methods, part 1".
                  </li>
                  <li>
                    Both the English and the Swedish course names are searched. Searching for "metod" will return the course "Computer Science Methods" with the Swedish name "Datalogisk metod".
                  </li>
                  <li>
                    At most 250 hits will be displayed. If you get too many hits, try to narrow the search conditions.
                  </li>
                  <li>
                    The search does not distinguish between upper and lower case characters.
                  </li>
                  <li>
                    It is not possible to use special characters, like quotes, in the search. These characters will be removed before the search is performed.
                  </li>
                  <li>
                    Your search may be restricted to courses starting in a specific term. By default, course are found without regard for when the course is offered.
                  </li>
                  <li>
                    Your search may be restricted to courses taught in English. By default, courses are found without regard for tutoring language.
                  </li>
                  <li>
                    You may select to show courses that are no longer offered or dormant at KTH (terminated courses). By default, these are not shown.
                  </li>
                  <li>
                    If you have questions or feedback on the course search, please contact 
                    <a
                      href="mailto:kopps@kth.se"
                    >
                      kopps@kth.se
                    </a>
                    .
                  </li>
                </ul>
              </div>
            </details>
          </div>
        </div>
        <div
          class="row"
        >
          <div
            class="col"
          >
            <form
              aria-label="Search course"
              name="searchForm"
              role="search"
              style="display: block;"
            >
              <div
                class="form-group"
              >
                <label
                  for="pattern"
                >
                  Search by writing in a course code or course name:
                  <span
                    id="searchfield-help-text"
                    style="font-weight: normal; display: block;"
                  >
                    Example of course code: SF1624
                  </span>
                </label>
                <input
                  id="pattern"
                  maxlength="80"
                  name="pattern"
                  size="50"
                  type="text"
                  value=""
                />
              </div>
              <details
                class=""
              >
                <summary
                  aria-label=""
                  class="white"
                >
                  Choose from other search criteria
                </summary>
                <div>
                  <div
                    class="row"
                  >
                    <div
                      class="col"
                    >
                      <div
                        class="form-group"
                      >
                        <fieldset>
                          <legend
                            class="form-control-label"
                          >
                            Course Start 2021
                          </legend>
                          <div
                            class="form-check form-group"
                          >
                            <input
                              class="form-check-input"
                              id="20211:3"
                              name="currentYear"
                              type="checkbox"
                              value="20211:3"
                            />
                            <label
                              class="form-control-label"
                              for="20211:3"
                            >
                              Spring 2021 period 3
                            </label>
                          </div>
                          <div
                            class="form-check form-group"
                          >
                            <input
                              class="form-check-input"
                              id="20211:4"
                              name="currentYear"
                              type="checkbox"
                              value="20211:4"
                            />
                            <label
                              class="form-control-label"
                              for="20211:4"
                            >
                              Spring 2021 period 4
                            </label>
                          </div>
                          <div
                            class="form-check form-group"
                          >
                            <input
                              class="form-check-input"
                              id="2021:summer"
                              name="currentYear"
                              type="checkbox"
                              value="2021:summer"
                            />
                            <label
                              class="form-control-label"
                              for="2021:summer"
                            >
                              2021 summer
                            </label>
                          </div>
                          <div
                            class="form-check form-group"
                          >
                            <input
                              class="form-check-input"
                              id="20212:1"
                              name="currentYear"
                              type="checkbox"
                              value="20212:1"
                            />
                            <label
                              class="form-control-label"
                              for="20212:1"
                            >
                              Autumn 2021 period 1
                            </label>
                          </div>
                          <div
                            class="form-check form-group"
                          >
                            <input
                              class="form-check-input"
                              id="20212:2"
                              name="currentYear"
                              type="checkbox"
                              value="20212:2"
                            />
                            <label
                              class="form-control-label"
                              for="20212:2"
                            >
                              Autumn 2021 period 2
                            </label>
                          </div>
                        </fieldset>
                      </div>
                    </div>
                    <div
                      class="col"
                    >
                      <div
                        class="form-group"
                      >
                        <fieldset>
                          <legend
                            class="form-control-label"
                          >
                            Course Start 2022
                          </legend>
                          <div
                            class="form-check form-group"
                          >
                            <input
                              class="form-check-input"
                              id="20221:3"
                              name="nextYear"
                              type="checkbox"
                              value="20221:3"
                            />
                            <label
                              class="form-control-label"
                              for="20221:3"
                            >
                              Spring 2022 period 3
                            </label>
                          </div>
                          <div
                            class="form-check form-group"
                          >
                            <input
                              class="form-check-input"
                              id="20221:4"
                              name="nextYear"
                              type="checkbox"
                              value="20221:4"
                            />
                            <label
                              class="form-control-label"
                              for="20221:4"
                            >
                              Spring 2022 period 4
                            </label>
                          </div>
                          <div
                            class="form-check form-group"
                          >
                            <input
                              class="form-check-input"
                              id="2022:summer"
                              name="nextYear"
                              type="checkbox"
                              value="2022:summer"
                            />
                            <label
                              class="form-control-label"
                              for="2022:summer"
                            >
                              2022 summer
                            </label>
                          </div>
                        </fieldset>
                      </div>
                    </div>
                  </div>
                  <div
                    class="row"
                  >
                    <div
                      class="col"
                    >
                      <div
                        class="form-group"
                      >
                        <fieldset>
                          <legend
                            class="form-control-label"
                          >
                            Educational level:
                          </legend>
                          <div
                            class="form-check form-group"
                          >
                            <input
                              class="form-check-input"
                              id="PREPARATORY"
                              name="eduLevel"
                              type="checkbox"
                              value="0"
                            />
                            <label
                              class="form-control-label"
                              for="PREPARATORY"
                            >
                              Pre-university level
                            </label>
                          </div>
                          <div
                            class="form-check form-group"
                          >
                            <input
                              class="form-check-input"
                              id="BASIC"
                              name="eduLevel"
                              type="checkbox"
                              value="1"
                            />
                            <label
                              class="form-control-label"
                              for="BASIC"
                            >
                              First cycle
                            </label>
                          </div>
                          <div
                            class="form-check form-group"
                          >
                            <input
                              class="form-check-input"
                              id="ADVANCED"
                              name="eduLevel"
                              type="checkbox"
                              value="2"
                            />
                            <label
                              class="form-control-label"
                              for="ADVANCED"
                            >
                              Second cycle
                            </label>
                          </div>
                          <div
                            class="form-check form-group"
                          >
                            <input
                              class="form-check-input"
                              id="RESEARCH"
                              name="eduLevel"
                              type="checkbox"
                              value="3"
                            />
                            <label
                              class="form-control-label"
                              for="RESEARCH"
                            >
                              Third cycle
                            </label>
                          </div>
                        </fieldset>
                      </div>
                    </div>
                    <div
                      class="col"
                    >
                      <div
                        class="form-group"
                      >
                        <fieldset>
                          <legend
                            class="form-control-label"
                          >
                            Other options:
                          </legend>
                          <div
                            class="form-check form-group"
                          >
                            <input
                              class="form-check-input"
                              id="onlyEnglish"
                              name="showOptions"
                              type="checkbox"
                              value="onlyEnglish"
                            />
                            <label
                              class="form-control-label"
                              for="onlyEnglish"
                            >
                              Courses taught in English
                            </label>
                          </div>
                          <div
                            class="form-check form-group"
                          >
                            <input
                              class="form-check-input"
                              id="onlyMHU"
                              name="showOptions"
                              type="checkbox"
                              value="onlyMHU"
                            />
                            <label
                              class="form-control-label"
                              for="onlyMHU"
                            >
                              Courses that deal with environment, environmental technology or sustainable development
                            </label>
                          </div>
                          <div
                            class="form-check form-group"
                          >
                            <input
                              class="form-check-input"
                              id="showCancelled"
                              name="showOptions"
                              type="checkbox"
                              value="showCancelled"
                            />
                            <label
                              class="form-control-label"
                              for="showCancelled"
                            >
                              Dormant/Terminated course
                            </label>
                          </div>
                        </fieldset>
                      </div>
                    </div>
                  </div>
                  <div
                    class="row"
                  >
                    <div
                      class="col"
                    >
                      <div
                        class="form-group"
                      >
                        <fieldset>
                          <legend
                            class="form-control-label"
                          >
                            School, department, etc
                          </legend>
                          <select
                            aria-label="School, department, etc"
                            class="form-control"
                            id="department"
                            name="department"
                          >
                            <option
                              selected=""
                              value=""
                            >
                              All schools
                            </option>
                            <option
                              class="form-control-label"
                            >
                              Older Schools
                            </option>
                          </select>
                        </fieldset>
                      </div>
                    </div>
                  </div>
                </div>
              </details>
              <div
                class="row"
              >
                <div
                  class="col"
                >
                  <button
                    class="btn btn-primary"
                    style="float: right;"
                    type="submit"
                  >
                    Search course
                  </button>
                </div>
              </div>
            </form>
          </div>
        </div>
        <div
          class="row"
        >
          <div
            class="col"
          />
        </div>
        <div
          class="row"
        >
          <div
            class="col"
          >
            <footer
              class="border-top mt-4 pt-1"
              id="articleFooter"
            >
              <address>
                Contact for questions regarding education at KTH: 
                <a
                  href="https://www.kth.se/en/studies/master/general-study-counselling-1.621634"
                >
                  Central study counseling
                </a>
                <br />
                Contact regarding technical matters on this page: 
                <a
                  href="mailto:kopps@kth.se"
                >
                  kopps@kth.se
                </a>
              </address>
            </footer>
          </div>
        </div>
      </main>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Render component CourseSearch within Layout match to snapshot in Swedish 1`] = `
<DocumentFragment>
  <div
    class="row"
  >
    <nav
      aria-label="Undermeny"
      class="col navbar navbar-expand-lg navbar-light"
      id="mainMenu"
    >
      <div
        class="collapse navbar-collapse"
        id="navbarNav"
      >
        <ul
          class="nav"
        >
          <li
            class="parentLink"
          >
            <a
              href="/student/"
            >
              Student på KTH
            </a>
          </li>
        </ul>
        <ul
          class="nav nav-list expandable"
        >
          <li
            class="nav-item ancestor"
          >
            <div>
              Kurs- och programkatalogen
            </div>
          </li>
          <li
            class="nav-item leaf"
          >
            <a
              class="nav-link"
              href="/student/kurser/kurser-inom-program"
            >
              Utbildningsplaner
            </a>
          </li>
          <li
            class="nav-item leaf"
          >
            <a
              class="nav-link"
              href="/student/kurser/sokkurs"
            >
              Sök kurser
            </a>
          </li>
          <li
            class="nav-item leaf"
          >
            <a
              class="nav-link"
              href="/student/kurser/org"
            >
              Kurser per skola
            </a>
          </li>
          <li
            class="nav-item leaf"
          >
            <a
              class="nav-link"
              href="/student/program/shb"
            >
              Studier före 07/08
            </a>
          </li>
        </ul>
      </div>
    </nav>
    <div
      class="col"
    >
      <main
        id="mainContent"
      >
        <div
          class="row"
        >
          <div
            class="col"
          >
            <header
              role="presentation"
            >
              <h1>
                Sök kurser
              </h1>
            </header>
            <div
              class="lead"
            >
              <p>
                Här hittar du information om kurser på KTH. Du får tillgång till information inför kursval, inför att gå kursen samt om kursens utveckling. Sök på hela eller delar av kursnamnet eller kurskoden. Information om vilka kurser som ingår i ett program når du via menyvalet utbildningsplaner.
              </p>
            </div>
          </div>
        </div>
        <div
          class="row"
        >
          <div
            class="col"
          >
            <div
              id="alert-placeholder"
            />
          </div>
        </div>
        <div
          class="row"
        >
          <div
            class="col"
          >
            <details
              class=""
            >
              <summary
                aria-label=""
                class="white"
              >
                Få hjälp med sökningen
              </summary>
              <div>
                <ul
                  class="search-instructions"
                >
                  <li>
                    Du kan söka på del av kursnamn eller kurskod. En sökning efter "data" hittar exempelvis såväl "Databasteknik", "Datalogi" som "Algoritmer, datastrukturer och komplexitet".
                  </li>
                  <li>
                    Skriver du flera ord i fältet hittas kurser som innehåller samtliga ord.
                  </li>
                  <li>
                    Du kan även söka på kursens engelska namn.
                  </li>
                  <li>
                    Sökningen visar max 250 träffar. Får du för många träffar, försök att förfina sökvillkoren.
                  </li>
                  <li>
                    Sökningen gör ingen skillnad på versaler och gemener (stora och små bokstäver).
                  </li>
                  <li>
                    Det går inte att använda specialtecken (t.ex. citationstecken). Dessa tas bort innan sökningen utförs.
                  </li>
                  <li>
                    Du kan avgränsa sökningen till att endast visa kurser som startar en specifik termin. Standardinställningen är att hitta kurser oavsett när de går.
                  </li>
                  <li>
                    Du kan avgränsa sökningen till att endast visa kurser med engelska som undervisningsspråk. Standardinställningen är att hitta kurser oavsett undervisningsspråk.
                  </li>
                  <li>
                    Du kan välja att även visa kurser som ej längre ges på KTH. Standardinställning är att dessa inte visas.
                  </li>
                  <li>
                    Om du har synpunkter eller frågor gällande kurssökningen, kontakta 
                    <a
                      href="mailto:kopps@kth.se"
                    >
                      kopps@kth.se
                    </a>
                    .
                  </li>
                </ul>
              </div>
            </details>
          </div>
        </div>
        <div
          class="row"
        >
          <div
            class="col"
          >
            <form
              aria-label="Sök kurs"
              name="searchForm"
              role="search"
              style="display: block;"
            >
              <div
                class="form-group"
              >
                <label
                  for="pattern"
                >
                  Ange del av kursnamn eller kurskod:
                  <span
                    id="searchfield-help-text"
                    style="font-weight: normal; display: block;"
                  >
                    Exempel på kurskod: SF1624
                  </span>
                </label>
                <input
                  id="pattern"
                  maxlength="80"
                  name="pattern"
                  size="50"
                  type="text"
                  value=""
                />
              </div>
              <details
                class=""
              >
                <summary
                  aria-label=""
                  class="white"
                >
                  Välj bland andra sökkriterier
                </summary>
                <div>
                  <div
                    class="row"
                  >
                    <div
                      class="col"
                    >
                      <div
                        class="form-group"
                      >
                        <fieldset>
                          <legend
                            class="form-control-label"
                          >
                            Kursstart 2021
                          </legend>
                          <div
                            class="form-check form-group"
                          >
                            <input
                              class="form-check-input"
                              id="20211:3"
                              name="currentYear"
                              type="checkbox"
                              value="20211:3"
                            />
                            <label
                              class="form-control-label"
                              for="20211:3"
                            >
                              VT2021 period 3
                            </label>
                          </div>
                          <div
                            class="form-check form-group"
                          >
                            <input
                              class="form-check-input"
                              id="20211:4"
                              name="currentYear"
                              type="checkbox"
                              value="20211:4"
                            />
                            <label
                              class="form-control-label"
                              for="20211:4"
                            >
                              VT2021 period 4
                            </label>
                          </div>
                          <div
                            class="form-check form-group"
                          >
                            <input
                              class="form-check-input"
                              id="2021:summer"
                              name="currentYear"
                              type="checkbox"
                              value="2021:summer"
                            />
                            <label
                              class="form-control-label"
                              for="2021:summer"
                            >
                              2021 sommar
                            </label>
                          </div>
                          <div
                            class="form-check form-group"
                          >
                            <input
                              class="form-check-input"
                              id="20212:1"
                              name="currentYear"
                              type="checkbox"
                              value="20212:1"
                            />
                            <label
                              class="form-control-label"
                              for="20212:1"
                            >
                              HT2021 period 1
                            </label>
                          </div>
                          <div
                            class="form-check form-group"
                          >
                            <input
                              class="form-check-input"
                              id="20212:2"
                              name="currentYear"
                              type="checkbox"
                              value="20212:2"
                            />
                            <label
                              class="form-control-label"
                              for="20212:2"
                            >
                              HT2021 period 2
                            </label>
                          </div>
                        </fieldset>
                      </div>
                    </div>
                    <div
                      class="col"
                    >
                      <div
                        class="form-group"
                      >
                        <fieldset>
                          <legend
                            class="form-control-label"
                          >
                            Kursstart 2022
                          </legend>
                          <div
                            class="form-check form-group"
                          >
                            <input
                              class="form-check-input"
                              id="20221:3"
                              name="nextYear"
                              type="checkbox"
                              value="20221:3"
                            />
                            <label
                              class="form-control-label"
                              for="20221:3"
                            >
                              VT2022 period 3
                            </label>
                          </div>
                          <div
                            class="form-check form-group"
                          >
                            <input
                              class="form-check-input"
                              id="20221:4"
                              name="nextYear"
                              type="checkbox"
                              value="20221:4"
                            />
                            <label
                              class="form-control-label"
                              for="20221:4"
                            >
                              VT2022 period 4
                            </label>
                          </div>
                          <div
                            class="form-check form-group"
                          >
                            <input
                              class="form-check-input"
                              id="2022:summer"
                              name="nextYear"
                              type="checkbox"
                              value="2022:summer"
                            />
                            <label
                              class="form-control-label"
                              for="2022:summer"
                            >
                              2022 sommar
                            </label>
                          </div>
                        </fieldset>
                      </div>
                    </div>
                  </div>
                  <div
                    class="row"
                  >
                    <div
                      class="col"
                    >
                      <div
                        class="form-group"
                      >
                        <fieldset>
                          <legend
                            class="form-control-label"
                          >
                            Utbildningsnivå:
                          </legend>
                          <div
                            class="form-check form-group"
                          >
                            <input
                              class="form-check-input"
                              id="PREPARATORY"
                              name="eduLevel"
                              type="checkbox"
                              value="0"
                            />
                            <label
                              class="form-control-label"
                              for="PREPARATORY"
                            >
                              Förberedande nivå
                            </label>
                          </div>
                          <div
                            class="form-check form-group"
                          >
                            <input
                              class="form-check-input"
                              id="BASIC"
                              name="eduLevel"
                              type="checkbox"
                              value="1"
                            />
                            <label
                              class="form-control-label"
                              for="BASIC"
                            >
                              Grundnivå
                            </label>
                          </div>
                          <div
                            class="form-check form-group"
                          >
                            <input
                              class="form-check-input"
                              id="ADVANCED"
                              name="eduLevel"
                              type="checkbox"
                              value="2"
                            />
                            <label
                              class="form-control-label"
                              for="ADVANCED"
                            >
                              Avancerad nivå
                            </label>
                          </div>
                          <div
                            class="form-check form-group"
                          >
                            <input
                              class="form-check-input"
                              id="RESEARCH"
                              name="eduLevel"
                              type="checkbox"
                              value="3"
                            />
                            <label
                              class="form-control-label"
                              for="RESEARCH"
                            >
                              Forskarnivå
                            </label>
                          </div>
                        </fieldset>
                      </div>
                    </div>
                    <div
                      class="col"
                    >
                      <div
                        class="form-group"
                      >
                        <fieldset>
                          <legend
                            class="form-control-label"
                          >
                            Övrigt:
                          </legend>
                          <div
                            class="form-check form-group"
                          >
                            <input
                              class="form-check-input"
                              id="onlyEnglish"
                              name="showOptions"
                              type="checkbox"
                              value="onlyEnglish"
                            />
                            <label
                              class="form-control-label"
                              for="onlyEnglish"
                            >
                              Ges på engelska
                            </label>
                          </div>
                          <div
                            class="form-check form-group"
                          >
                            <input
                              class="form-check-input"
                              id="onlyMHU"
                              name="showOptions"
                              type="checkbox"
                              value="onlyMHU"
                            />
                            <label
                              class="form-control-label"
                              for="onlyMHU"
                            >
                              Behandlar miljö, miljöteknik eller hållbar utveckling
                            </label>
                          </div>
                          <div
                            class="form-check form-group"
                          >
                            <input
                              class="form-check-input"
                              id="showCancelled"
                              name="showOptions"
                              type="checkbox"
                              value="showCancelled"
                            />
                            <label
                              class="form-control-label"
                              for="showCancelled"
                            >
                              Nedlagd kurs
                            </label>
                          </div>
                        </fieldset>
                      </div>
                    </div>
                  </div>
                  <div
                    class="row"
                  >
                    <div
                      class="col"
                    >
                      <div
                        class="form-group"
                      >
                        <fieldset>
                          <legend
                            class="form-control-label"
                          >
                            Skola, avdelning, etc
                          </legend>
                          <select
                            aria-label="Skola, avdelning, etc"
                            class="form-control"
                            id="department"
                            name="department"
                          >
                            <option
                              selected=""
                              value=""
                            >
                              Samtliga skolor
                            </option>
                            <option
                              class="form-control-label"
                            >
                              Äldre skolor
                            </option>
                          </select>
                        </fieldset>
                      </div>
                    </div>
                  </div>
                </div>
              </details>
              <div
                class="row"
              >
                <div
                  class="col"
                >
                  <button
                    class="btn btn-primary"
                    style="float: right;"
                    type="submit"
                  >
                    Sök kurs
                  </button>
                </div>
              </div>
            </form>
          </div>
        </div>
        <div
          class="row"
        >
          <div
            class="col"
          />
        </div>
        <div
          class="row"
        >
          <div
            class="col"
          >
            <footer
              class="border-top mt-4 pt-1"
              id="articleFooter"
            >
              <address>
                Kontakt för frågor om utbildning på KTH: 
                <a
                  href="https://www.kth.se/studievagledning"
                >
                  Central studievägledning
                </a>
                <br />
                Teknisk kontakt om denna sida: 
                <a
                  href="mailto:kopps@kth.se"
                >
                  kopps@kth.se
                </a>
              </address>
            </footer>
          </div>
        </div>
      </main>
    </div>
  </div>
</DocumentFragment>
`;
